--- a/docs/style.css
+++ b/docs/style.css
@@ -602,12 +602,25 @@ video {
   position: sticky;
 }
 
+.inset-0 {
+  inset: 0px;
+}
+
+.inset-x-0 {
+  left: 0px;
+  right: 0px;
+}
+
 .left-0 {
   left: 0px;
 }
 
 .right-0 {
   right: 0px;
+}
+
+.right-10 {
+  right: 2.5rem;
 }
 
 .right-3 {
@@ -634,16 +647,16 @@ video {
   top: 1.25rem;
 }
 
-.right-10 {
-  right: 2.5rem;
+.top-7 {
+  top: 1.75rem;
 }
 
 .top-8 {
   top: 2rem;
 }
 
-.top-7 {
-  top: 1.75rem;
+.bottom-20 {
+  bottom: 5rem;
 }
 
 .z-10 {
@@ -1080,6 +1093,14 @@ video {
   --tw-bg-opacity: 0.6;
 }
 
+.bg-opacity-30 {
+  --tw-bg-opacity: 0.3;
+}
+
+.bg-opacity-75 {
+  --tw-bg-opacity: 0.75;
+}
+
 .bg-hero-banner {
   background-image: url(assets/img/bg.png);
 }
@@ -1142,6 +1163,11 @@ video {
   padding-right: 0.75rem;
 }
 
+.px-4 {
+  padding-left: 1rem;
+  padding-right: 1rem;
+}
+
 .px-5 {
   padding-left: 1.25rem;
   padding-right: 1.25rem;
@@ -1195,11 +1221,6 @@ video {
 .py-8 {
   padding-top: 2rem;
   padding-bottom: 2rem;
-}
-
-.px-4 {
-  padding-left: 1rem;
-  padding-right: 1rem;
 }
 
 .pl-10 {
@@ -1314,6 +1335,11 @@ video {
 .text-white {
   --tw-text-opacity: 1;
   color: rgb(255 255 255 / var(--tw-text-opacity));
+}
+
+.text-indigo-300 {
+  --tw-text-opacity: 1;
+  color: rgb(165 180 252 / var(--tw-text-opacity));
 }
 
 .underline {
